@@ -1,5 +1,7 @@
 *SVN*
 
+* Added 'content_type' accessor, to allow content type to be set on a per-message basis. content_type defaults to "text/plain".
+
 * Silently ignore Iconv::IllegalSequence errors when converting text #1341 [lon@speedymac.com]
 
 * Support attachments and multipart messages.
